welcome.lessons.welcome.methods.picture.PictureMono2.scala.error
PictureMono2:3: error: not found: value faireV
  faireV();
  ^PictureMono2:4: error: not found: value seDeplacerAvantDeFaireLeV
  seDeplacerAvantDeFaireLeV();
  ^PictureMono2:5: error: not found: value faireV
  faireV();
  ^PictureMono2:6: error: not found: value seDeplacerAvantDeFaireLeV
  seDeplacerAvantDeFaireLeV();
  ^PictureMono2:7: error: not found: value faireV
  faireV();
  ^PictureMono2:8: error: not found: value seDeplacerAvantDeFaireLeV
  seDeplacerAvantDeFaireLeV();
  ^PictureMono2:9: error: not found: value faireV
  faireV();
  ^